Fix z-index

--- a/src/azure-blob-filer/src/assets/sass/_contents.scss
+++ b/src/azure-blob-filer/src/assets/sass/_contents.scss
@@ -33,7 +33,7 @@
   border-radius: 0;
 
   .p-submenu-list {
-    z-index: 999;
+    z-index: 999 !important;
     width: 200px;
   }
 }
